project page transitions and animations

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -38,7 +38,7 @@ tags:
   <div class="container">
     <div class="row align-items-center">
       <div class="col-12 col-lg-10 mx-lg-auto fade-in">
-        <div class="content">
+        <div class="content slide-up-1">
           <p class="text-large mb-0">Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the original ID if at all possible. The dropper and cube of bitters nearly
             phonetically spelled out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion
             for true craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply
@@ -52,28 +52,28 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-01.jpg)"></div>
         </div>
-        <div class="content slide-left">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-02.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
-      <div class="col-md-6 slide-right">
+      <div class="col-md-6 slide-up-1">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-left">
+      <div class="col-md-6 slide-up-2">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-04.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12 slide-up">
+      <div class="col-12 slide-up-1">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-05.jpg)"></div>
         </div>
