--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -32,8 +32,8 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-10 mx-md-auto fade-in">
-        <div class="content">
+      <div class="col-12 col-md-10 mx-md-auto">
+        <div class="content slide-up-1">
           <p class="text-large mb-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat molestiae magnam esse officia voluptas
             possimus architecto eius, nobis eaque, minima voluptatibus? Totam autem amet explicabo ipsa exercitationem non
@@ -47,58 +47,58 @@ tags:
 <section class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-12 slide-down">
+      <div class="col-12 slide-up-1">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-01.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 slide-right">
-        <div class="content pr-md-1">
+      <div class="col-md-6">
+        <div class="content pr-md-1 slide-up-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-left">
-        <div class="content pl-md-1">
+      <div class="col-md-6">
+        <div class="content pl-md-1 slide-up-2">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-07.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12 slide-up">
-        <div class="content">
+      <div class="col-12">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-02.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 slide-right">
-        <div class="content pr-md-1">
+      <div class="col-md-6">
+        <div class="content pr-md-1 slide-up-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-04.jpg')"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-left">
-        <div class="content pl-md-1">
+      <div class="col-md-6">
+        <div class="content pl-md-1 slide-up-2">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-06.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12 slide-up">
-        <div class="content">
+      <div class="col-12">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-05.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 slide-right">
-        <div class="content pr-md-1">
+      <div class="col-md-6">
+        <div class="content pr-md-1 slide-up-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-09.svg')"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-left">
-        <div class="content pl-md-1">
+      <div class="col-md-6">
+        <div class="content pl-md-1 slide-up-2">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-08.svg')"></div>
         </div>
       </div>
