--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -16,7 +16,7 @@ tags:
 - web
 ---
 
-<section class="pt-0 fade-in">
+<section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -34,8 +34,8 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-10 mx-lg-auto fade-in">
-        <div class="content">
+      <div class="col-12 col-lg-10 mx-lg-auto">
+        <div class="content slide-up-1">
           <p class="text-large mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis laboriosam fugiat qui, beatae tempora eius rerum ex mollitia maxime aliquid quas vero, doloremque culpa accusamus. Quam voluptatibus adipisci error doloribus!</p>
         </div>
       </div>
