--- a/src/about.html
+++ b/src/about.html
@@ -4,7 +4,7 @@ title: About
 testimonial: true
 ---
 
-<section id="page-intro" class="fade-in">
+<section id="page-intro">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -60,7 +60,7 @@ testimonial: true
             design some of the most influential logos, campaigns, and user
             interfaces on the web over the last twenty years.
           </p>
-          <a href="#" class="btn btn-inline">Watch the Talk</a>
+          <a href="https://vimeo.com/134270678/39f6957127" target="_blank" class="btn btn-inline">Watch the Talk</a>
         </div>
       </div>
     </div>
