--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -41,8 +41,8 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-10 mx-lg-auto fade-in">
-        <div class="content">
+      <div class="col-12 col-lg-10 mx-lg-auto">
+        <div class="content slide-up-1">
           <p class="text-large mb-0">All four competitions would need identities that were distinctly different from one another
             but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to
             spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials
@@ -60,21 +60,21 @@ tags:
           <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0"
             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-work-01.jpg)"></div>
         </div>
-        <div class="content slide-left">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-10.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 slide-right">
+      <div class="col-md-6 slide-up-1">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-09.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-left">
+      <div class="col-md-6 slide-up-2">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-08.jpg)"></div>
         </div>
@@ -82,28 +82,28 @@ tags:
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-work-02.jpg)"></div>
         </div>
-        <div class="content slide-left">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-04.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 slide-right">
+      <div class="col-md-6 slide-up-1">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-05.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-left">
+      <div class="col-md-6 slide-up-2">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-03.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12 slide-up">
+      <div class="col-12 slide-up-1">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-06-video.jpg)"></div>
         </div>
