--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -34,8 +34,8 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-10 mx-md-auto fade-in">
-        <div class="content">
+      <div class="col-12 col-md-10 mx-md-auto">
+        <div class="content slide-up-1">
           <p class="text-large mb-0">
             Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative
             development and celebrates the diversity of the host countries. Sweeping IMAX-sized animations, King Kong scale
@@ -51,30 +51,30 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-01.jpg)"></div>
         </div>
-        <div class="content slide-left">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-02.jpg)"></div>
         </div>
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-05.jpg)"></div>
         </div>
-        <div class="content slide-left">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-08.jpg)"></div>
         </div>
-        <div class="content slide-up">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-03.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row mt-3">
-      <div class="col-md-6 slide-right">
+      <div class="col-md-6 slide-up-1">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-07.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-left">
+      <div class="col-md-6 slide-up-2">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-06.jpg)"></div>
         </div>
