--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -38,8 +38,8 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-10 mx-md-auto fade-in">
-        <div class="content">
+      <div class="col-12 col-md-10 mx-md-auto">
+        <div class="content slide-up-1">
           <p class="text-large mb-0">Formal and fun, forward and fully evolved, this HTML5 logo is imminently extensible yet refreshingly complete — the
             W3C encourages you to use it as-is or build on it to make it even better. Just like the technology it lives amidst,
             setting a common and comprehensive baseline is just the beginning.</p>
@@ -52,13 +52,13 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <img src="/assets/img/projects/html5/html5-work-01.svg" alt="HTML 5 logo pile image">
         </div>
-        <div class="content slide-left">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/html5/html5-work-02.jpg)"></div>
         </div>
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.hero }})"></div>
         </div>
       </div>
