--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -17,7 +17,7 @@ tags:
   - events
 ---
 
-<section class="pt-0 fade-in">
+<section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -39,8 +39,8 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-10 mx-md-auto fade-in">
-        <div class="content">
+      <div class="col-12 col-md-10 mx-md-auto">
+        <div class="content slide-up-1">
           <p class="text-large mb-0">
             Working on a tight timeline and a remarkable scale, Ocupop designed the 'Locate' visual system to celebrate Mapbox's authentic position at the leading edge of location data and the passionate community that joins them there.
           </p>
@@ -53,31 +53,31 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-04.jpg)"></div>
         </div>
-        <div class="content slide-left">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-01.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="content slide-right">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-06.jpg)"></div>
         </div>
-        <div class="content slide-left">
+        <div class="content slide-up-1">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-02.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 slide-right">
+      <div class="col-md-6 slide-up-1">
         <div class="content pr-md-0">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-05.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-left">
+      <div class="col-md-6 slide-up-2">
         <div class="content pl-md-0">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-03.jpg)"></div>
         </div>
