animations and transitions

--- a/src/about.html
+++ b/src/about.html
@@ -32,8 +32,8 @@ testimonial: true
 </div>
 <section class="bg-dark text-white">
   <div class="container">
-    <div class="row">
-      <div class="col-md-6 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-md-6">
         <div class="content editable">
           <h2 class="mt-5">Fuck No!</h2>
           <p>
@@ -48,7 +48,7 @@ testimonial: true
           <a href="#" class="btn btn-inline">Watch the Talk</a>
         </div>
       </div>
-      <div class="col-md-6 slide-up-2">
+      <div class="col-md-6">
         <div class="content editable">
           <h2 class="mt-5">Shit Yeah!</h2>
           <p>
@@ -68,12 +68,12 @@ testimonial: true
 </section>
 <section>
   <div class="container">
-    <div class="row">
+    <div class="row slide-up-1">
       {% for member in site.data.staff %}
       <div class="col-md-4">
         <div class="content">
           <div class="position-relative">
-            <a href="#" class="bg-image aspect-1x1 border-0 {% cycle 'slide-up-1', 'slide-up-2', 'slide-up-3' %}" style="background-image: url({{ member.image | default: site.placeholders.aspect-4x3 }})" data-toggle="modal" data-target=".team-modal-{{ forloop.index }}">
+            <a href="#" class="bg-image aspect-1x1 border-0" style="background-image: url({{ member.image | default: site.placeholders.aspect-4x3 }})" data-toggle="modal" data-target=".team-modal-{{ forloop.index }}">
               <div class="hover-overlay text-white">
                 <div class="hover-content">
                   <p class="hover-primary-text">{{ member.name }}</p>
