--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@ mosaic:
 
 <section id="page-intro">
   <div class="container">
-    <div class="row ">
+    <div class="row slide-up-1">
       <div class="col-12">
         <div class="content">
           <p class="quote">"I have never felt more alive!"</p>
         </div>
       </div>
     </div>
-    <div id="home-copy" class="row">
+    <div id="home-copy" class="row slide-up-1">
       <div class="col-12">
         <div class="content">
           <p>
@@ -53,9 +53,9 @@ mosaic:
 
 <section>
   <div class="container">
-    <div class="row">
+    <div class="row slide-up-1">
       <div class="col-md-6">
-        <div class="content editable slide-up-1">
+        <div class="content editable">
           <p class="quote">
             “Not necessarily what I wanted, but exactly what I needed.”
           </p>
@@ -65,7 +65,7 @@ mosaic:
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content editable slide-up-2">
+        <div class="content editable">
           <p>
             As experts, we’re hired to deliver solutions not options. We’ve
             honed an uncanny ability to be direct yet diplomatic, concise yet
@@ -83,9 +83,9 @@ mosaic:
 
 <section class="bg-dark text-white">
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row align-items-center slide-up-1">
       <div class="col-md-6">
-        <div class="content editable slide-up-1">
+        <div class="content editable">
           <p class="quote">
             “If you guys are such hot shit, who have you worked with? Anything I have ever seen?”
           </p>
@@ -95,7 +95,7 @@ mosaic:
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content slide-up-2 editable">
+        <div class="content editable">
           <p>
             Ocupop has helped to define the visual language of the web and
             beyond since 2000, we’ve led design projects for companies at all
@@ -109,10 +109,10 @@ mosaic:
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row slide-up-1">
       <div class="col-12">
         <div class="content">
-          <div class="logo-pile slide-up-1">
+          <div class="logo-pile">
             <div class="logo-item">
               <img src="/assets/img/home/logopile-google.png" alt="Google Logo" class="img-fluid" />
             </div>
@@ -129,7 +129,7 @@ mosaic:
               <img src="/assets/img/home/logopile-facebook.png" alt="Facebook Logo" class="img-fluid" />
             </div>
           </div>
-          <div class="logo-pile slide-up-1">
+          <div class="logo-pile">
             <div class="logo-item">
               <img src="/assets/img/home/logopile-frontline.png" alt="Frontline Logo" class="img-fluid" />
             </div>
@@ -154,9 +154,9 @@ mosaic:
 
 <section>
   <div class="container">
-    <div class="row">
+    <div class="row slide-up-1">
       <div class="col-lg-6">
-        <div class="content editable slide-up-1">
+        <div class="content editable">
           <p class="quote">“We are DEZIGNING! Ocupop rulez SUPREME!”</p>
           <p class="quote-author">
             <strong>Jon Burr</strong><br />Ocupop Web Developer, Canadian
@@ -164,7 +164,7 @@ mosaic:
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="content slide-up-2 editable">
+        <div class="content editable">
           <p>
             Infamous international Vision Quests, dance parties, and spirited
             creative debate, Tom Collinses, skateboard ramps, and world class
@@ -173,7 +173,7 @@ mosaic:
             World’s Greatest DesignsquadTM, so drop a joke in the joke station
             and let’s see if you’ve got what it takes!
           </p>
-          <a href="#" class="btn btn-outline-dark">About Us</a>
+          <a href="/about" class="btn btn-outline-dark">About Us</a>
         </div>
       </div>
     </div>
@@ -192,22 +192,22 @@ mosaic:
 
 <section>
   <div class="container">
-    <div class="row">
-      <div class="col-md-6 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-md-6 ">
         <div class="bg-image aspect-4x3 mt-4 mt-md-0" style="background-image: url(/assets/img/home/homepage-culture-01.jpg)"></div>
       </div>
-      <div class="col-md-6 slide-up-2">
+      <div class="col-md-6">
         <div class="bg-image aspect-4x3 mt-4 mt-md-0" style="background-image: url(/assets/img/home/homepage-culture-02.jpg)"></div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-4 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-md-4 ">
         <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-03.jpg)"></div>
       </div>
-      <div class="col-md-4 slide-up-2">
+      <div class="col-md-4">
         <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-04.jpg)"></div>
       </div>
-      <div class="col-md-4 slide-up-3">
+      <div class="col-md-4">
         <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-05.jpg)"></div>
       </div>
     </div>
