transitions / interactions, intro example, contact page images

--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -21,8 +21,8 @@ tags:
 
 <section class="pt-0 bg-white">
   <div class="container">
-    <div class="row">
-      <div class="col-12 fade-in">
+    <div class="row slide-up-1">
+      <div class="col-12">
         <div class="content">
           <p class="lead">FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related elds. Every
             year FIRST holds a tournament comprising of four different competitions. Each competition presents a new
@@ -40,7 +40,7 @@ tags:
 </div>
 <section>
   <div class="container">
-    <div class="row">
+    <div class="row slide-up-1">
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content slide-up-1">
           <p class="text-large mb-0">All four competitions would need identities that were distinctly different from one another
@@ -68,13 +68,13 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-md-6">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-09.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-up-2">
+      <div class="col-md-6">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-08.jpg)"></div>
         </div>
@@ -90,20 +90,20 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-md-6">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-05.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-up-2">
+      <div class="col-md-6">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-03.jpg)"></div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-12 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-12">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-06-video.jpg)"></div>
         </div>
