--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -16,11 +16,11 @@ tags:
   - design
 ---
 
-<section class="pt-0 fade-in">
+<section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content editable">
+        <div class="content slide-up-1">
           <p class="lead">A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.</p>
           <p>Google Developer Days is a multi-location web developer conference showcasing the latest and greatest in web tech and developer tools from the geniuses at Google. Three epic events hosted thousands of entrepreneurs, disruptors, and developers from across the globe. Two to three days of exciting inside info, technical talks, and hands-on learning were carefully curated in Krakow, Bangalore, and Beijing. From the identity design to every pillow and drink ticket, every detail was carefully designed by Ocupop.</p>
         </div>
@@ -68,13 +68,13 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row mt-3">
-      <div class="col-md-6 slide-up-1">
+    <div class="row mt-3 slide-up-1">
+      <div class="col-md-6">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-07.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-up-2">
+      <div class="col-md-6">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-06.jpg)"></div>
         </div>
