--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -13,11 +13,11 @@ tags:
   - illustration
 ---
 
-<section class="pt-0 fade-in">
+<section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content editable">
+        <div class="content slide-up-1">
           <p class="lead">Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand,
             designed the identity, and has served as agency of record since day one.</p>
           <p>98% of the beef consumed in Hawaii is imported. Kunoa is changing that. Hawaii’s only vertically integrated cattle company is ushering in a future where food is locally raised with integrity and care. A future where produce and protein is abundant, fresh, and healthy. A future where Hawaii can stand proud and free, flush with local food as rich as the islands themselves.</p>
@@ -53,14 +53,14 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row slide-up-1">
       <div class="col-md-6">
-        <div class="content pr-md-1 slide-up-1">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-03.jpg)"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content pl-md-1 slide-up-2">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-07.jpg)"></div>
         </div>
       </div>
@@ -72,14 +72,14 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row slide-up-1">
       <div class="col-md-6">
-        <div class="content pr-md-1 slide-up-1">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-04.jpg')"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content pl-md-1 slide-up-2">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-06.jpg')"></div>
         </div>
       </div>
@@ -91,14 +91,14 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row slide-up-1">
       <div class="col-md-6">
-        <div class="content pr-md-1 slide-up-1">
+        <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-09.svg')"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content pl-md-1 slide-up-2">
+        <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-08.svg')"></div>
         </div>
       </div>
