--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -21,7 +21,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content editable">
+        <div class="content slide-up-1">
           <p class="lead">
             Donkey cars, self driving pizza delivery, and lenticular billboards&mdash; Mapbox Locate was about as close as you can get to navigating into the future.
           </p>
@@ -71,13 +71,13 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-md-6">
         <div class="content pr-md-0">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-05.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-up-2">
+      <div class="col-md-6">
         <div class="content pl-md-0">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-03.jpg)"></div>
         </div>
