--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@ mosaic:
 
 <section id="page-intro">
   <div class="container">
-    <div class="row slide-up-1">
+    <div class="row">
       <div class="col-12">
         <div class="content">
-          <p class="quote">"I have never felt more alive!"</p>
+          <p class="quote">I have never felt more alive!</p>
         </div>
       </div>
     </div>
-    <div id="home-copy" class="row slide-up-1">
+    <div id="home-copy" class="row">
       <div class="col-12">
         <div class="content">
           <p>
@@ -57,7 +57,7 @@ mosaic:
       <div class="col-md-6">
         <div class="content editable">
           <p class="quote">
-            “Not necessarily what I wanted, but exactly what I needed.”
+            Not necessarily what I wanted, but exactly what I needed.
           </p>
           <p class="quote-author">
             <strong>Jesse Fink</strong><br />Founder, Refed and Priceline.com
@@ -87,7 +87,7 @@ mosaic:
       <div class="col-md-6">
         <div class="content editable">
           <p class="quote">
-            “If you guys are such hot shit, who have you worked with? Anything I have ever seen?”
+            If you guys are such hot shit, who have you worked with? Anything I have ever seen?
           </p>
           <p class="quote-author">
             <strong>You (being a little grumpy, honestly)</strong><br />Potential Ocupop Client
@@ -157,7 +157,7 @@ mosaic:
     <div class="row slide-up-1">
       <div class="col-lg-6">
         <div class="content editable">
-          <p class="quote">“We are DEZIGNING! Ocupop rulez SUPREME!”</p>
+          <p class="quote">We are DEZIGNING! Ocupop rulez SUPREME!</p>
           <p class="quote-author">
             <strong>Jon Burr</strong><br />Ocupop Web Developer, Canadian
           </p>
