--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -16,7 +16,7 @@ tags:
 
 <section class="pt-0">
   <div class="container">
-    <div class="row">
+    <div class="row slide-up-1">
       <div class="col-12">
         <div class="content editable">
           <p class="lead">Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any
@@ -36,9 +36,9 @@ tags:
 <!-- <div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg" data-speed="0.8"></div> -->
 <section>
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-12 col-lg-10 mx-lg-auto fade-in">
-        <div class="content slide-up-1">
+    <div class="row align-items-center slide-up-1">
+      <div class="col-12 col-lg-10 mx-lg-auto">
+        <div class="content">
           <p class="text-large mb-0">Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the original ID if at all possible. The dropper and cube of bitters nearly
             phonetically spelled out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion
             for true craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply
@@ -60,20 +60,20 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row align-items-center">
-      <div class="col-md-6 slide-up-1">
+    <div class="row align-items-center slide-up-1">
+      <div class="col-md-6">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-up-2">
+      <div class="col-md-6">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-04.jpg)"></div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-12 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-12">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-05.jpg)"></div>
         </div>
