--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -65,8 +65,8 @@ tags:
 </div>
 <section>
   <div class="container">
-    <div class="row">
-      <div class="col-12 col-lg-10 mx-lg-auto slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
           <p class="text-large mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur
             tempore hic, obcaecati totam repellendus laudantium eius soluta quidem exercitationem quibusdam? Quis
@@ -91,13 +91,13 @@ tags:
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6 slide-up-1">
+    <div class="row slide-up-1">
+      <div class="col-md-6">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6 slide-up-2">
+      <div class="col-md-6">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
         </div>
