--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -20,7 +20,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content slide-up-1">
           <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem commodi necessitatibus nam ex dicta vitae repellendus saepe laborum eos aut!</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, repellat!</p>
         </div>
