--- a/src/about.html
+++ b/src/about.html
@@ -25,10 +25,8 @@ testimonial: true
     </div>
   </div>
 </section>
-<div class="row no-gutters slide-up-1">
-  <div class="col-12">
-    <div class="bg-image aspect-4x3" style="background-image: url('/uploads/ocupop-about-fucknoshityeah.jpg')"></div>
-  </div>
+<div class="parallax-window">
+  <div class="bg-image aspect-4x3" style="background-image: url('/uploads/ocupop-about-fucknoshityeah.jpg')"></div>
 </div>
 <section class="bg-dark text-white">
   <div class="container">
@@ -68,12 +66,12 @@ testimonial: true
 </section>
 <section>
   <div class="container">
-    <div class="row slide-up-1">
+    <div class="row">
       {% for member in site.data.staff %}
       <div class="col-md-4">
         <div class="content">
           <div class="position-relative">
-            <a href="#" class="bg-image aspect-1x1 border-0" style="background-image: url({{ member.image | default: site.placeholders.aspect-4x3 }})" data-toggle="modal" data-target=".team-modal-{{ forloop.index }}">
+            <a href="#" class="bg-image aspect-1x1 border-0 slide-up-1" style="background-image: url({{ member.image | default: site.placeholders.aspect-4x3 }})" data-toggle="modal" data-target=".team-modal-{{ forloop.index }}">
               <div class="hover-overlay text-white">
                 <div class="hover-content">
                   <p class="hover-primary-text">{{ member.name }}</p>
