--- a/src/contact.html
+++ b/src/contact.html
@@ -64,21 +64,21 @@ testimonial: true
         <div class="content">
           <div class="row">
             <div class="col-md-6 slide-right">
-              <div class="bg-image aspect-4x3 mt-4" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+              <div class="bg-image aspect-4x3 mt-4" style="background-image: url(/assets/img/contact-1.jpg)"></div>
             </div>
             <div class="col-md-6 slide-left">
-              <div class="bg-image aspect-4x3 mt-4" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+              <div class="bg-image aspect-4x3 mt-4" style="background-image: url(/assets/img/contact-2.jpg)"></div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-4 slide-right">
-              <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/contact-3.jpg)"></div>
             </div>
             <div class="col-md-4 slide-up">
-              <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/contact-4.jpg)"></div>
             </div>
             <div class="col-md-4 slide-left">
-              <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/contact-5.jpg)"></div>
             </div>
           </div>
         </div>
