Add html 5 project assets

--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -33,7 +33,7 @@ tags:
   </div>
 </section>
 <div class="parallax-window">
-  <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.hero }});"></div>
+  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/html5/html5-work-parallax.jpg);"></div>
 </div>
 <section>
   <div class="container">
@@ -59,7 +59,7 @@ tags:
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/html5/html5-work-02.jpg)"></div>
         </div>
         <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.hero }})"></div>
+          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/html5/html5-work-03.jpg)"></div>
         </div>
       </div>
     </div>
