lazy load test for homepage images

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@ mosaic:
   </div>
 </section>
 
-<section class="d-none">
+<!-- <section class="d-none">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -188,27 +188,27 @@ mosaic:
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <section>
   <div class="container">
     <div class="row slide-up-1">
       <div class="col-md-6 ">
-        <div class="bg-image aspect-4x3 mt-4 mt-md-0" style="background-image: url(/assets/img/home/homepage-culture-01.jpg)"></div>
+        <div class="bg-image aspect-4x3 mt-4 mt-md-0 lazy-load" data-image="/assets/img/home/homepage-culture-01.jpg" style="background-image: url()"></div>
       </div>
       <div class="col-md-6">
-        <div class="bg-image aspect-4x3 mt-4 mt-md-0" style="background-image: url(/assets/img/home/homepage-culture-02.jpg)"></div>
+        <div class="bg-image aspect-4x3 mt-4 mt-md-0 lazy-load" data-image="/assets/img/home/homepage-culture-02.jpg"></div>
       </div>
     </div>
     <div class="row slide-up-1">
       <div class="col-md-4 ">
-        <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-03.jpg)"></div>
+        <div class="bg-image aspect-1x1 mt-4 lazy-load" data-image="/assets/img/home/homepage-culture-03.jpg"></div>
       </div>
       <div class="col-md-4">
-        <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-04.jpg)"></div>
+        <div class="bg-image aspect-1x1 mt-4 lazy-load" data-image="/assets/img/home/homepage-culture-04.jpg"></div>
       </div>
       <div class="col-md-4">
-        <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-05.jpg)"></div>
+        <div class="bg-image aspect-1x1 mt-4 lazy-load" data-image="/assets/img/home/homepage-culture-05.jpg"></div>
       </div>
     </div>
   </div>
