--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,12 @@ layout: default
 title: Home
 projects: 
  - google-developer-days
- - mapbox-locate
  - kunoa
+ - first-launch
+ - burton-learn-to-ride
+ - mapbox-locate
+ - bittercube
+ 
 
 mosaic:
   - image: /assets/img/home/homepage-culture-01.jpg
@@ -20,7 +24,7 @@ mosaic:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <p class="quote">I have never felt more alive!</p>
+          <p class="quote">Ocupop is what the industry-types would call a boutique agency.</p>
         </div>
       </div>
     </div>
@@ -28,18 +32,7 @@ mosaic:
       <div class="col-12">
         <div class="content">
           <p>
-            Yeah. No. That’s complete bullshit. Though we have tons of
-            testimonials exalting the breadth of our awesomeness (from Jeff’s
-            beard to Michael’s hair to Abby’s quality nicknames to even our work
-            itself), this quote is made up, but it’s what we expect every client
-            to say after working with Ocupop.
-          </p>
-          <p>
-            The power of design thinking paired with unparalleled enthusiasm and
-            empathy makes for a creative experience like no other. Equal parts
-            energizing and enlightening, our client relationships are tight. We
-            dig deep, debate, and deliver together—laughing, crying and fighting
-            like hell to change lives... or at very least blow minds.
+            As experts, we're hired to deliver solutions not options. We've honed an uncanny ability to be direct yet diplomatic, concise yet collaborative&mdash;tackling tough conversations and even tougher design problems together. We avoid the 'consultant-cop-out' of forcing clients to choose between multiple partially thought out options and instead work collaboratively toward one reasoned, powerful solution.
           </p>
         </div>
       </div>
@@ -47,43 +40,23 @@ mosaic:
   </div>
 </section>
 
-<section id="photo-grid" class="pt-0">
+<section id="photo-grid" class="py-0">
  {% include photo-grid.html %}
 </section>
-
-<section>
-  <div class="container">
-    <div class="row slide-up-1">
-      <div class="col-md-6">
-        <div class="content editable">
-          <p class="quote">
-            Not necessarily what I wanted, but exactly what I needed.
-          </p>
-          <p class="quote-author">
-            <strong>Jesse Fink</strong><br />Founder, Refed and Priceline.com
-          </p>
-        </div>
+<div id="project-nav">
+  {% for i in (1..9) %}
+    <a href="#" class="project-nav-item">
+      <img src="{{ site.placeholders.aspect-1x1}}" class="img-fluid" alt="">
+      <div class="hover-overlay">
+        <p>Project name</p>
       </div>
-      <div class="col-md-6">
-        <div class="content editable">
-          <p>
-            As experts, we’re hired to deliver solutions not options. We’ve
-            honed an uncanny ability to be direct yet diplomatic, concise yet
-            collaborative— tackling tough conversations and even tougher design
-            problems together. We avoid the ‘consultant-cop-out’ of forcing
-            clients to choose between multiple partially thought out options and
-            instead work collaboratively toward one reasoned, powerful solution.
-          </p>
-          <a href="/focus" class="btn btn-outline-dark">What we do</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </a>
+  {% endfor %}
+</div>
 
 <section class="bg-dark text-white">
   <div class="container">
-    <div class="row align-items-center slide-up-1">
+    <div class="row align-items-center">
       <div class="col-md-6">
         <div class="content editable">
           <p class="quote">
@@ -109,7 +82,7 @@ mosaic:
         </div>
       </div>
     </div>
-    <div class="row slide-up-1">
+    <div class="row">
       <div class="col-12">
         <div class="content">
           <div class="logo-pile">
@@ -120,7 +93,8 @@ mosaic:
               <img src="/assets/img/home/logopile-w3c.png" alt="W3C Logo" class="img-fluid" />
             </div>
             <div class="logo-item">
-              <img src="/assets/img/home/logopile-harvardbusinessreview.png" alt="Harvard Business Review Logo" class="img-fluid" />
+              <img src="/assets/img/home/logopile-harvardbusinessreview.png" alt="Harvard Business Review Logo"
+                class="img-fluid" />
             </div>
             <div class="logo-item">
               <img src="/assets/img/home/logopile-sxsw.png" alt="South by SouthWest Logo" class="img-fluid" />
@@ -152,9 +126,48 @@ mosaic:
   </div>
 </section>
 
+<!-- <section>
+  <div class="container">
+    <div class="row ">
+      <div class="col-md-6">
+        <div class="content editable">
+          <p class="quote">
+            Not necessarily what I wanted, but exactly what I needed.
+          </p>
+          <p class="quote-author">
+            <strong>Jesse Fink</strong><br />Founder, Refed and Priceline.com
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content editable">
+          <p>
+            As experts, we’re hired to deliver solutions not options. We’ve
+            honed an uncanny ability to be direct yet diplomatic, concise yet
+            collaborative— tackling tough conversations and even tougher design
+            problems together. We avoid the ‘consultant-cop-out’ of forcing
+            clients to choose between multiple partially thought out options and
+            instead work collaboratively toward one reasoned, powerful solution.
+          </p>
+          <a href="/focus" class="btn btn-outline-dark">What we do</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+
+<section class="py-0">
+  <div id="team-photo-grid">
+    {% for i in (1..4) %}
+      <div class="team-photo" style="background-image: url({{ site.placeholders.aspect-1x1 }})">
+      </div>
+    {% endfor %}
+  </div>
+</section>
+
 <section>
   <div class="container">
-    <div class="row slide-up-1">
+    <div class="row ">
       <div class="col-lg-6">
         <div class="content editable">
           <p class="quote">We are DEZIGNING! Ocupop rulez SUPREME!</p>
@@ -175,40 +188,6 @@ mosaic:
           </p>
           <a href="/about" class="btn btn-outline-dark">About Us</a>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- <section class="d-none">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        {% include mosaic.html style="default5" %}
-      </div>
-    </div>
-  </div>
-</section> -->
-
-<section>
-  <div class="container">
-    <div class="row slide-up-1">
-      <div class="col-md-6 ">
-        <div class="bg-image aspect-4x3 mt-4 mt-md-0 lazy-load" data-image="/assets/img/home/homepage-culture-01.jpg" style="background-image: url()"></div>
-      </div>
-      <div class="col-md-6">
-        <div class="bg-image aspect-4x3 mt-4 mt-md-0 lazy-load" data-image="/assets/img/home/homepage-culture-02.jpg"></div>
-      </div>
-    </div>
-    <div class="row slide-up-1">
-      <div class="col-md-4 ">
-        <div class="bg-image aspect-1x1 mt-4 lazy-load" data-image="/assets/img/home/homepage-culture-03.jpg"></div>
-      </div>
-      <div class="col-md-4">
-        <div class="bg-image aspect-1x1 mt-4 lazy-load" data-image="/assets/img/home/homepage-culture-04.jpg"></div>
-      </div>
-      <div class="col-md-4">
-        <div class="bg-image aspect-1x1 mt-4 lazy-load" data-image="/assets/img/home/homepage-culture-05.jpg"></div>
       </div>
     </div>
   </div>
